dark mode fix

--- a/src/index.styl
+++ b/src/index.styl
@@ -129,15 +129,11 @@ main {
     width 100%
     max-width $max-width-content
     box-sizing border-box
-    padding 0 calc(env(safe-area-inset-right) + 1em) 0 calc(env(safe-area-inset-left) + 1em) 
+    padding 1em calc(env(safe-area-inset-right) + 1em) 1em calc(env(safe-area-inset-left) + 1em) 
     margin 0 auto
     display flex
     flex-direction column
     gap 1em
-
-    div.h-divider {
-      height 1em 
-    }
 
     div.disconnected {
       display flex
